--- a/server/package.json
+++ b/server/package.json
@@ -1,19 +1,27 @@
 {
   "name": "server",
-  "module": "index.ts",
+  "module": "src/index.ts",
   "type": "module",
+  "version": "1.1.1",
+  "scripts": {
+    "dev": "bun run --watch src/index.ts",
+    "migrate": "bun run apply-migration.ts"
+  },
   "devDependencies": {
+    "@types/bcryptjs": "^3.0.0",
     "@types/bun": "^1.3.3",
-    "better-sqlite3": "^12.5.0"
+    "@types/jsonwebtoken": "^9.0.10"
   },
   "peerDependencies": {
     "typescript": "^5.9.3"
   },
   "dependencies": {
     "@types/uuid": "^11.0.0",
+    "bcryptjs": "^3.0.3",
     "drizzle-kit": "^0.31.8",
     "drizzle-orm": "^0.45.0",
     "hono": "^4.10.7",
+    "jsonwebtoken": "^9.0.3",
     "uuid": "^13.0.0"
   }
 }
