chore: add ACR image cleanup script and integrate it into the Azure deploy workflow.

--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -42,3 +42,9 @@ jobs:
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         images: ${{ secrets.ACR_NAME }}.azurecr.io/familytree:${{ github.sha }}
+
+    - name: Cleanup Old Images
+      run: |
+        chmod +x ./scripts/cleanup-acr.sh
+        # Cleaning up 'familytree' repository, keeping last 5 images
+        ./scripts/cleanup-acr.sh ${{ secrets.ACR_NAME }} familytree 5
